<resources>
    <string name="app_name" translatable="false">AppProject_Group25_ITSMAP_F20_Master_Disaster_Broadcaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="disaster_icon" translatable="false">Disaster icon</string>
    <string name="ongoing">Ongoing Disasters</string>
    <string name="my_disasters">My Disasters</string>
    <string name="button" translatable="false">Button</string>
    <string name="profile">My Profile</string>
    <string name="rankings">Rankings</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="signIn">Sign In</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="appHeadline1" translatable="false">Master Disaster</string>
    <string name="appHeadline2" translatable="false">Broadcaster</string>
    <string name="register">Don\'t have an Account? Register here!</string>
    <string name="signUp">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="registerNewUser">Register new user</string>
    <string name="enterEmail">Enter Email address:</string>
    <string name="passEmpty">Password field is empty, please try again…</string>
    <string name="passShort">Password was too short, enter minimum 8 characters</string>
    <string name="emailEmpty">Email Address field is empty, please try again</string>
    <string name="registrationSuccess">Registration completed</string>
    <string name="registrationFailed">Registration failed</string>
    <string name="enterPassword">Enter new Password:</string>
    <string name="password_hint">Password</string>
    <string name="verifyPassword">Verify new Password:</string>
    <string name="total_points" translatable="false">Total points</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="myProfile">My Profile:</string>
    <string name="name">Name:</string>
    <string name="nickname">Nickname:</string>
    <string name="country">Country:</string>
    <string name="rank" translatable="false">Rank:</string>
    <string name="points" translatable="false">"Points: "</string>
    <string name="zero" translatable="false">0</string>
    <string name="apply">Apply</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="_0" translatable="false">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="scopeMe">Show me</string>
    <string name="top" translatable="false">Top</string>
    <string name="totalUsers">"Users: "</string>
    <string name="totalSubmits">"Submits: "</string>
    <string name="nicknameTooLong">Nickname too long keep under 16 symbols</string>
    <string name="rank_end">TH</string>
    <string name="pts" translatable="false">Pts</string>
    <string name="first" translatable="false">ST</string>
    <string name="second" translatable="false">ND</string>
    <string name="third" translatable="false">RD</string>
    <string name="fourthAndRest" translatable="false">TH</string>
    <string name="x" translatable="false">X</string>
    <string name="capture">Capture</string>
    <string name="swap">Swap</string>
    <string name="disasterImg">Disaster Image</string>
    <string name="submit">Submit</string>
    <string name="changePicture">Change Picture</string>
    <string name="worldRank">World Rank:</string>
    <string name="myProfilePicture">Profile Picture</string>
    <string name="appImage" translatable="false">Application\'s Banner</string>
    <string name="date">Date:</string>
    <string name="dateExample" translatable="false">06-05-2020</string>
    <string name="title">Title:</string>
    <string name="auth_fail">Authentication failed. Please try Again...</string>
    <string name="auth_succes">Authentication Successfull</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="permissions_notgranted">Permissions not granted</string>
    <string name="no_rank">No Rank</string>
    <string name="profile_update">Profile updated</string>
    <string name="you_got">You got</string>
    <string name="point_s" translatable="false">Point(s)!</string>
    <string name="unrecognized_shape">Unrecognized shape type:</string>
    <string name="no_events">No events nearby</string>
</resources>
