<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_rankings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/roundcorner"
    >

    <LinearLayout
        android:id="@+id/rankings_customRow"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_rankings_position_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:gravity="start"
            android:text="@string/zero"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_rankings_position_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:gravity="start"
            android:text="@string/rank_end"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
        
        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_rankings_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/nickname"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_rankings_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:gravity="end|center_vertical"
            android:text="@string/zero"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_rankings_label_pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:gravity="end|center_vertical|center_horizontal"
            android:text="@string/pts"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>