<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Fragments.mydisasters_fragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/roundcorner"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_label_points"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/total_points"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    tools:text="Total points" />

                <TextView
                    android:id="@+id/textview_totalPoints"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginStart="100dp"

                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_label_rank"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/worldRank"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    tools:text="World rank"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/textview_worldRank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginStart="100dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/zero"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/roundcorner"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mydisasters_gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                 />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mydisasters_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:foregroundGravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimary"
            android:divider="@android:color/transparent"
            android:dividerHeight="15sp"
            app:layout_constraintBottom_toTopOf="@+id/back_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/back_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mydisasters_recyclerview" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>